--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
   "author": "Alejandro Barrios <ottoabarriosp@hotmail.com>",
   "license": "MIT",
   "scripts": {
-    "test": "REPORT_GAS=true npx hardhat test",
+    "test": "npx hardhat test",
     "init": "yarn add --dev hardhat && npx hardhat",
-    "node": "npx hardhat node",
-    "deploy:localhost": "npx hardhat run --network localhost scripts/deploy.ts",
-    "deploy:goerli": "npx hardhat run scripts/deploy.ts --network goerli"
+    "node": "npx hardhat node"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
@@ -32,7 +30,8 @@
     "solidity-coverage": "^0.7.21",
     "ts-node": ">=8.0.0",
     "typechain": "^8.1.0",
-    "typescript": ">=4.5.0"
+    "typescript": ">=4.5.0",
+    "openzeppelin-test-helpers": "^0.5.1"
   },
   "dependencies": {
     "dotenv": "^16.0.1"
